--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         maven {
             url("https://repo.spring.io/plugins-release")
         }
+        maven {
+            url 'https://mymavenrepo.com/repo/idOPJhSN5m7HecjD9MQB/'
+        }
     }
 
     dependencies {
@@ -19,6 +22,7 @@ buildscript {
         classpath(libraries.asciidoctorGradlePlugin)
         classpath(libraries.springDependencyMangementGradlePlugin)
         classpath(libraries.springBootGradlePlugin)
+        classpath(libraries.puritanaBuildPLugin)
     }
 }
 
@@ -33,6 +37,7 @@ allprojects {
     apply(plugin: "propdeps-maven")
     apply(plugin: "propdeps-idea")
     apply(plugin: "io.spring.dependency-management")
+    apply(plugin: "build-plugin")
 
     dependencyManagement {
         imports {
