--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -116,3 +116,4 @@ libraries.cargoGradlePlugin = "com.bmuschko:gradle-cargo-plugin:2.7.1"
 libraries.prodepsGradlePlugin = "io.spring.gradle:propdeps-plugin:0.0.10.RELEASE"
 libraries.springBootGradlePlugin = "org.springframework.boot:spring-boot-gradle-plugin:${versions.springBootVersion}"
 libraries.springDependencyMangementGradlePlugin = "io.spring.gradle:dependency-management-plugin"
+libraries.puritanaBuildPLugin = "pt.puritana.gradle.plugins:build-plugin:1.0.0.1565442539"
