--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ executors:
   java11:
     docker:
       - image: circleci/openjdk:11-jdk
-    resource_class: small
+    resource_class: medium
 
 references:
   workspace_root: &workspace_root
@@ -18,7 +18,7 @@ jobs:
     executor: java11
     environment:
       # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
+      JVM_OPTS: -Xmx1024m
       TERM: dumb
     steps:
       - *attach_workspace
