--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run:
-          name: Run gradle build
-          command: ./gradlew build
+          name: Run gradle package
+          command: ./gradlew assemble
       - save_cache:
           paths:
             - ~/.gradle
