--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
       - run:
-          name: Run gradle package
+          name: Run gradle assemble
           command: ./gradlew assemble
       - save_cache:
           paths:
