--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,7 @@ jobs:
             curl -H "Authorization: token $GITHUB_PERSONAL_ACCESS_TOKEN" -H "Accept: application/vnd.github.v3.raw" -O -L https://api.github.com/repos/puritana/application-configuration/contents/applications/accounts-management-service/stg/uaa.yml
             curl -H "Authorization: token $GITHUB_PERSONAL_ACCESS_TOKEN" -H "Accept: application/vnd.github.v3.raw" -O -L https://api.github.com/repos/puritana/application-configuration/contents/applications/accounts-management-service/stg/context.xml
             heroku plugins:install @heroku-cli/plugin-java
-            heroku config:set WEBAPP_RUNNER_OPTS="--uri-encoding=UTF-8 --expand-war-file --expanded-dir-name ROOT --context-xml ./context.xml --path uaa" --app $SERVICE
+            heroku config:set WEBAPP_RUNNER_OPTS="--uri-encoding=UTF-8 --expand-war-file true --expanded-dir-name ROOT --context-xml ./context.xml --path uaa" --app $SERVICE
             heroku config:set UAA_CONFIG_PATH="/app" --app $SERVICE
             heroku war:deploy $ARTIFACT --app $SERVICE --includes /home/circleci/project/uaa.yml:/home/circleci/project/context.xml
 
