--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             url("https://repo.spring.io/plugins-release")
         }
