--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ buildscript {
             url("https://repo.spring.io/plugins-release")
         }
         maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        maven {
             url 'https://zonumi.jfrog.io/artifactory/puritana-releases/'
             credentials {
                 username = System.getenv()['ARTIFACTORY_USERNAME']
@@ -30,6 +33,7 @@ buildscript {
         classpath(libraries.springDependencyMangementGradlePlugin)
         classpath(libraries.springBootGradlePlugin)
         classpath(libraries.puritanaBuildPLugin)
+        classpath(libraries.nodeGradlePlugin)
     }
 }
 
@@ -57,6 +61,7 @@ allprojects {
 
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             url("https://build.shibboleth.net/nexus/content/repositories/releases/")
         }
@@ -145,6 +150,7 @@ subprojects {
 
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             url("https://jitpack.io")
         }
