--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -117,3 +117,4 @@ libraries.prodepsGradlePlugin = "io.spring.gradle:propdeps-plugin:0.0.10.RELEASE
 libraries.springBootGradlePlugin = "org.springframework.boot:spring-boot-gradle-plugin:${versions.springBootVersion}"
 libraries.springDependencyMangementGradlePlugin = "io.spring.gradle:dependency-management-plugin"
 libraries.puritanaBuildPLugin = "pt.puritana.gradle.plugins:build-plugin:1.0.0.1604318849"
+libraries.nodeGradlePlugin = "com.github.node-gradle:gradle-node-plugin:2.2.4"
