--- a/uaa/package.json
+++ b/uaa/package.json
@@ -8,12 +8,37 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "node_modules/jasmine/bin/jasmine.js --config=jasmine.json"
+    "test": "node_modules/jasmine/bin/jasmine.js --config=jasmine.json",
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "author": "CloudFoundry",
   "license": "Apache-2.0",
   "dependencies": {
     "jasmine": "^3.6.1",
-    "jasmine-core": "3.6.0"
+    "jasmine-core": "3.6.0",
+    "unify": "https://zonumi.jfrog.io/artifactory/puritana-npm/unify-2.6.3/-/unify-2.6.3-1.0.0.tgz"
+  },
+  "devDependencies": {
+    "@babel/core": "7.10.2",
+    "@babel/node": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.1.0",
+    "chromedriver": "^87.0.0",
+    "css-loader": "3.5.1",
+    "eslint": "6.8.0",
+    "fibers": "4.0.2",
+    "file-loader": "6.0.0",
+    "html-webpack-plugin": "4.0.4",
+    "mini-css-extract-plugin": "0.9.0",
+    "nightwatch": "^1.4.3",
+    "nightwatch-vrt": "^0.2.10",
+    "node-sass": "4.13.1",
+    "sass": "1.26.3",
+    "sass-loader": "8.0.2",
+    "webpack": "4.42.1",
+    "webpack-cli": "3.3.11"
   }
 }
